--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,10 +38,13 @@ dependencies {
     implementation 'com.squareup.okhttp3:okhttp:3.12.0'
     implementation 'org.apache.httpcomponents:httpcore:4.4.10'
 
+
 //    implementation ('com.github.bumptech.glide:okhttp3-integration:4.2.0')
 //            {
 //        exclude group: 'glide-parent' }
 
+//导入
+    implementation 'com.alibaba:fastjson:1.1.71.android'
 }
 
 
