--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,7 +8,7 @@ android {
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
         release {
@@ -19,32 +19,27 @@ android {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'com.android.support:appcompat-v7:28.0.0'
-    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    implementation 'androidx.appcompat:appcompat:1.0.0-beta01'
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.2'
     testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support.test:runner:1.0.2'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    androidTestImplementation 'androidx.test:runner:1.1.0-alpha4'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0-alpha4'
     implementation 'org.apache.httpcomponents:httpcore:4.4.10'
-
-
     implementation 'com.github.bumptech.glide:glide:4.3.1'
-
-//    {
-//        exclude group: 'com.android.support'
-//    }
+    //    {
+    //        exclude group: 'com.android.support'
+    //    }
     annotationProcessor 'com.github.bumptech.glide:compiler:4.3.1'
-
     implementation 'com.squareup.okhttp3:okhttp:3.12.0'
     implementation 'org.apache.httpcomponents:httpcore:4.4.10'
-
-
-//    implementation ('com.github.bumptech.glide:okhttp3-integration:4.2.0')
-//            {
-//        exclude group: 'glide-parent' }
-
-//导入
+    //    implementation ('com.github.bumptech.glide:okhttp3-integration:4.2.0')
+    //            {
+    //        exclude group: 'glide-parent' }
+    //导入
     implementation 'com.alibaba:fastjson:1.1.71.android'
+    implementation 'com.github.bumptech.glide:okhttp3-integration:4.10.0'
+    implementation files('libs/showapi_sdk.jar')
 }
 
 
